Fixed white space issue

--- a/src/Components/AddTodo/AddTodo.css
+++ b/src/Components/AddTodo/AddTodo.css
@@ -1,5 +1,6 @@
 .popup {
   background-color: white;
+  position: relative;
   align-items: left;
 }
 .popupContent {
